--- a/verified.html
+++ b/verified.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login page</title>
-    <link rel="stylesheet" href="signup2.css">
+    <link rel="stylesheet" href="verified.css">
 </head>
 
 <body>
@@ -20,12 +20,20 @@
             <div class="cont2">
                 <p>Verified</p>
                 <br><br>
-                <img src="Group 11.svg" alt=""  >
+                <div class="image">
+                    <img src="Group 11.png" alt="" class="center" >
+
+                </div>
+              
                 <div class="text">
                     <p>Your email has been verified</p>
                 </div>
 
-                <input type="submit" value= "Proceed">
+                <div class="sub">
+                    <input type="submit" value= "Proceed">
+
+                </div>
+
                 
 
 
